重做2阶段（未完成）： 为城镇资源添加等级设定 将城镇资源的管理统一放到TownResourceHolder和TownResourceManager 具有物品形式的城镇资源以ItemStack形式存储 警告！此版本尚未完成，存在使游戏崩溃的bug且城镇无法正常运行！最好不要回滚到这个版本。 Warning! This commit is not completed, there are bugs crashing the game and town can't work! You'd better not roll back to this commit!